--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-gson:0.11.5'
-//	implementation 'io.jsonwebtoken:jjwt:0.11.5'
-//	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	compileOnly "org.springframework.boot:spring-boot-starter-security"
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -61,6 +60,11 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	//log
+	implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+
 }
 
 tasks.named('test') {
