--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:/db/migration # ???
-    schemas: study_basic
+    schemas: joara_basic
   sql:
     init:
       platform: postgres
