--- a/src/main/resources/app/cors/cors.yml
+++ b/src/main/resources/app/cors/cors.yml
@@ -7,4 +7,7 @@ app:
         headers: "*"
         origins:
           - https://ropung.github.io/react-joara-front/
+          # 프로파일 잘 안 되면 아래처럼 목록 추가해서 사용
+          - http://localhost:3000
+          - http://127.0.0.1:3000
         credentials: true
