fix/refactor(cors, jwt): CORS 안 되는 거 고침, JWT 속성 뎁스 좀 바꿈.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   config:
     import:
-      - classpath:/app/jwt/jwt.yml
-      - classpath:/app/cors/cors.yml
+      - classpath:app/jwt/jwt.yml
+      - classpath:app/cors/cors.yml
   data:
     redis:
       host: localhost
