feat(sample image upload): 우선은 파일 이름 그대로 업로드까지만 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,15 @@ server:
   port: 80
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   config:
     import:
-      - classpath:app/jwt/jwt.yml
-      - classpath:app/cors/cors.yml
+      - classpath:/app/jwt/jwt.yml
+      - classpath:/app/cors/cors.yml
+      - classpath:/app/sample/sample-image.yml
   data:
     redis:
       host: localhost
